refactor(infrastructure): change ci triggers

--- a/ci-terraform-pipeline.yml
+++ b/ci-terraform-pipeline.yml
@@ -1,8 +1,8 @@
 trigger:
   branches:
     include:
-      - "*"
-    exclude:
+      - "infrastructure"
+      - "infrastructure/*"
       - "main"
   paths:
     exclude:
