--- a/ci-terraform-pipeline.yml
+++ b/ci-terraform-pipeline.yml
@@ -5,6 +5,9 @@ trigger:
       - "infrastructure/*"
       - "main"
   paths:
+    include:
+      - "infrastructure"
+      - "infrastructure/*"
     exclude:
       - "README.md"
 
