--- a/ci-terraform-pipeline.yml
+++ b/ci-terraform-pipeline.yml
@@ -8,6 +8,7 @@ trigger:
     include:
       - "infrastructure"
       - "infrastructure/*"
+      - "infrastructure/*/*"
     exclude:
       - "README.md"
 
