refactor(infrastructure): change cd trigger

--- a/ci-terraform-pipeline.yml
+++ b/ci-terraform-pipeline.yml
@@ -9,6 +9,8 @@ trigger:
       - "infrastructure"
       - "infrastructure/*"
       - "infrastructure/*/*"
+      - "ci-terraform-pipeline.yml"
+      - "cd-terraform-pipeline.yml"
     exclude:
       - "README.md"
 
