--- a/cd-terraform-pipeline.yml
+++ b/cd-terraform-pipeline.yml
@@ -1,6 +1,16 @@
 trigger:
-  - main
-
+  branches:
+    include:
+      - "main"
+  paths:
+    include:
+      - "infrastructure"
+      - "infrastructure/*"
+      - "infrastructure/*/*"
+      - "ci-terraform-pipeline.yml"
+      - "cd-terraform-pipeline.yml"
+    exclude:
+      - "README.md"
 pool:
   vmImage: "ubuntu-latest"
 
