--- a/pipelines-templates/jobs/terraform-deploy.yml
+++ b/pipelines-templates/jobs/terraform-deploy.yml
@@ -3,7 +3,7 @@ parameters:
   azureServiceConnection: "ARM_SUBSCRIPTION"
 
   terraformValidate: false
-  terraformPlan: true
+  terraformPlan: false
   terraformPublishPlan: true
   terraformApply: true
   terraformDestroy: false
