feat: add cd pipeline to app

--- a/cd-app-pipeline.yml
+++ b/cd-app-pipeline.yml
@@ -1,3 +1,6 @@
+parameters:
+  environment: "dev"
+
 trigger:
   - "app"
   - "app/*"
@@ -27,3 +30,33 @@ stages:
               repository: "voting-app"
               command: "push"
               tags: "latest"
+  - stage: Deploy
+    displayName: Deploy to AKS
+    dependsOn: Build
+    jobs:
+      - deployment: DeployToAKS
+        environment: ${{ parameters.environment }}
+        strategy:
+          canary:
+            trafficRouting:
+              type: "weighted"
+              weight: 20
+            preApproval:
+              conditions:
+                - environment: ${{ parameters.environment }}
+                  result: "succeeded()"
+        pool:
+          vmImage: "ubuntu-latest"
+        variables:
+          - group: ACR_credentials
+          - group: AKS_credentials
+        steps:
+          - checkout: self
+          - task: Kubernetes@1
+            displayName: Deploy to AKS
+            inputs:
+              connectionType: "Kubernetes Service Connection"
+              kubernetesServiceEndpoint: "kubepmorosactivity5dev001"
+              namespace: "default"
+              command: "create"
+              arguments: "-f $(System.DefaultWorkingDirectory)/app/k8s-deploy-aks.yaml"
