--- a/cd-app-pipeline.yml
+++ b/cd-app-pipeline.yml
@@ -29,6 +29,7 @@ stages:
     dependsOn: Build
     jobs:
       - deployment: DeployToAKS
+        environment: "dev"
         strategy:
           runOnce:
             deploy:
